--- a/mysitio/blog/templates/blog/post_list.html
+++ b/mysitio/blog/templates/blog/post_list.html
@@ -7,6 +7,15 @@
     <title>Luciana´s Blog</title>
 </head>
 <body>
-    
+    <div>
+        <h1> <a href="/"> Django Blog </a></h1>
+    </div>
+    {% for post in posts %}
+        <div>
+            <p>Publicado: {{ post.published_date}}</p>
+            <h1><a href="">{{ post.title }}</a></h1>
+            <p>{{ post.text|linebreaksbr }}</p>    
+        </div>
+    {% endfor %}
 </body>
 </html>
